syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_environment;
message DsEnvironment {

     int32  id= 1;
     int64  code= 2;
     optional string name= 3;
     optional string config=4 ;
     optional string  description= 5;
     optional int32  operator= 6;
     optional string  worker_groups= 7;
     optional string  create_time=8 ;
     optional string  update_time= 9;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsEnvironmentService {
  rpc ListDsEnvironments(ListDsEnvironmentsRequest) returns (ListDsEnvironmentsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsEnvironments"
    };
  }

  rpc GetDsEnvironment(GetDsEnvironmentRequest) returns (DsEnvironment) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsEnvironments/*}"
    };
  }

  rpc CreateDsEnvironment(CreateDsEnvironmentRequest) returns (DsEnvironment) {
    option (google.api.http) = {
      post: "/v1alpha1/DsEnvironments"
      body: "DsEnvironment"
    };
  }

  rpc UpdateDsEnvironment(UpdateDsEnvironmentRequest) returns (DsEnvironment) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsEnvironment.name=DsEnvironments/*}"
      body: "DsEnvironment"
    };
  }

  rpc DeleteDsEnvironment(DeleteDsEnvironmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsEnvironments/*}"
    };
  }

  rpc VerifyDsEnvironment(VerifyDsEnvironmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/DsEnvironments:verify"
    };
  }
}

// message DsEnvironment {
// ! This should be defined elsewhere
// }

message ListDsEnvironmentsRequest {


  // The maximum number of items to return.
  uint64 page_size = 1;

  uint64 page_num = 2;
  optional string search_val=3 ;
}

message ListDsEnvironmentsResponse {
  repeated DsEnvironment total_list = 1;
  uint64 current_page = 2;
  uint64 page_size = 3;
  uint64 start = 4;
  uint64 total = 5;
  uint64 total_page = 6;
}

message GetDsEnvironmentRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsEnvironmentRequest {
  string name = 1;
  string config = 2;
  optional string description = 3;
  int32 operator = 4;
  string worker_groups = 5;
}

message UpdateDsEnvironmentRequest {
  int64  code= 2;
  optional string name= 3;
  optional string config=4 ;
  optional string  description= 5;
  optional string  worker_groups= 7;
}

message DeleteDsEnvironmentRequest {
  // The resource name of the DsEnvironment to be deleted.
  int32 id = 1;
}
message VerifyDsEnvironmentRequest {
  string environment_name=1 ;
}