syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_queue;


message DsQueue {

     int32 id=1 ;
     optional string queue_name=2 ;
     optional string  queue=3 ;
     optional string create_time=4 ;
     optional string update_time=5 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsQueueService {
  rpc ListDsQueues(ListDsQueuesRequest) returns (ListDsQueuesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsQueues"
    };
  }

  rpc GetDsQueue(GetDsQueueRequest) returns (DsQueue) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsQueues/*}"
    };
  }

  rpc CreateDsQueue(CreateDsQueueRequest) returns (DsQueue) {
    option (google.api.http) = {
      post: "/v1alpha1/DsQueues"
      body: "DsQueue"
    };
  }

  rpc UpdateDsQueue(UpdateDsQueueRequest) returns (DsQueue) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsQueue.name=DsQueues/*}"
      body: "DsQueue"
    };
  }

  rpc DeleteDsQueue(DeleteDsQueueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsQueues/*}"
    };
  }
}

// message DsQueue {
// ! This should be defined elsewhere
// }

message ListDsQueuesRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsQueuesResponse {
  // The field name should match the noun "DsQueue" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsQueue DsQueues = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsQueueRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsQueueRequest {
  // The parent resource name where the DsQueue is to be created.
  string parent = 1;

  // The DsQueue id to use for this DsQueue.
  string DsQueue_id = 2;

  // The DsQueue resource to create.
  // The field name should match the Noun in the method name.
  DsQueue DsQueue = 3;
}

message UpdateDsQueueRequest {
  // The DsQueue resource which replaces the resource on the server.
  DsQueue DsQueue = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsQueueRequest {
  // The resource name of the DsQueue to be deleted.
  string name = 1;
}
